# script

./: GRAMMAR.md  LICENSE  README.md  benchmark.py  pyproject.toml  requirements.txt
docs/: CIP_STEREO_THEORY.md  SPEC.md  STANDALONE_ARCHITECTURE.md  materials_polymers_states.md  metals_organometallics.md  organic_aromatic_stereo.md  reactions_salts_radicals.md
examples/: basic_usage.py  rdkit_demo.py
script/: __init__.py  canonical.py  chiral.py  cip.py  grammar.lark  grammar.py  local_rings.py  mol.py  parser.py  peptide.py  ranking.py  rdkit_bridge.py  state_machine.py  stereo.py  validator.py  writer.py
tests/: test_canonicalizer.py  test_parser.py  test_rdkit_integration.py  test_v2.py  test_v3.py
