[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "script-notation"
version = "2.0.0"
description = "SCRIPT 2.0: A topological, grammar-governed molecular notation for AI and high-precision cheminformatics."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SCRIPT Development Team", email = "script@example.com"}
]
maintainers = [
    {name = "SCRIPT Development Team", email = "script@example.com"}
]
keywords = ["chemistry", "cheminformatics", "smiles", "molecular", "notation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "lark>=1.1.0",
]

[project.optional-dependencies]
rdkit = ["rdkit>=2023.3.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]
all = ["rdkit>=2023.3.1"]

[project.urls]
Homepage = "https://github.com/script-notation/script"
Documentation = "https://script-notation.readthedocs.io"
Repository = "https://github.com/script-notation/script.git"
"Bug Tracker" = "https://github.com/script-notation/script/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["script*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "rdkit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lark.*"
ignore_missing_imports = true